--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "bunyan": "^1.8.5",
     "bunyan-format": "^0.2.1",
     "cip": "^1.0.0",
-    "node-rdkafka": "github:iradul/node-rdkafka#fix-windows-build"
+    "node-rdkafka": "^2.5.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
