--- a/package.json
+++ b/package.json
@@ -28,19 +28,17 @@
   },
   "dependencies": {
     "avsc": "github:keyruler/avsc-keyruler",
-    "axios": "^0.15.3",
-    "bluebird": "^3.4.6",
-    "bunyan": "^1.8.5",
-    "bunyan-format": "^0.2.1",
-    "cip": "^1.0.0",
-    "node-rdkafka": "^2.5.1"
+    "axios": "0.18.0",
+    "bluebird": "3.5.3",
+    "bunyan": "1.8.12",
+    "bunyan-format": "0.2.1",
+    "cip": "1.0.1",
+    "node-rdkafka": "2.5.1"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "eslint": "^3.12.2",
-    "grunt": "^1.0.1",
-    "grunt-release": "^0.14.0",
-    "mocha": "^5.0.5",
-    "sinon": "^4.4.9"
+    "chai": "4.2.0",
+    "eslint": "5.12.0",
+    "mocha": "5.2.0",
+    "sinon": "7.2.2"
   }
 }
