--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "chai": "4.2.0",
+    "chai-as-promised": "^7.1.1",
     "eslint": "5.12.0",
     "mocha": "5.2.0",
     "sinon": "7.2.2"
