--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "bunyan": "1.8.12",
     "bunyan-format": "0.2.1",
     "cip": "1.0.1",
-    "node-rdkafka": "^2.6.1"
+    "node-rdkafka": "github:keyruler/node-rdkafka"
   },
   "devDependencies": {
     "chai": "4.2.0",
