--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   "devDependencies": {
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
-    "eslint": "5.16.0",
-    "mocha": "5.2.0",
+    "eslint": "^6.8.0",
+    "mocha": "^7.1.1",
     "sinon": "7.2.2"
   }
 }
