--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "avsc-keyruler": "^2.0.0",
-    "axios": "0.18.1",
+    "axios": "^0.21.1",
     "bluebird": "3.5.3",
     "bunyan": "1.8.12",
     "bunyan-format": "0.2.1",
